# learn__rust_graphql

./: Cargo.toml  docker-compose.yml
develop/migrations/2022-10-27-225411_insert_article/: down.sql  up.sql
migrations/2022-10-27-223450_creat_article/: down.sql
src/: graphql.rs  lib.rs  main.rs  persistence.rs
src/graphql/: database.rs  enums.rs  model.rs  mutation.rs  query.rs  types.rs  typye.rs
src/graphql/database/: data.rs
src/graphql/enums/: photo_category.rs
src/graphql/model/: article.rs  photo.rs  user.rs
src/persistence/: model.rs  repository.rs
