[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web     = "4.0.1"
async-graphql = { version = "3.0", features = ["chrono"] }
async-graphql-actix-web = "3.0"
once_cell = "1.8.0"

env_logger = "0.5"
log = "0.4"

diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
