[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "4.0.13", features = ["dataloader"] }
async-graphql-actix-web = "4.0.13"
actix-rt = "2.7.0"
actix-web = "4.2.1"
env_logger = "0.5"
once_cell = "1.8.0"

dotenv = "0.15.0"
log = "0.4"

diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
